--- a/code/dashboard/index.html
+++ b/code/dashboard/index.html
@@ -55,7 +55,7 @@
           </div>
           <div class="panel panel-default">
             <div class="panel-heading">
-              <h3 class="panel-title">Temp. Topic (publishing to)</h3>
+              <h3 class="panel-title">Temp. Topic (subscribed to)</h3>
             </div>
             <div class="panel-body">
               <h4 id="tempTopic"></h4>
@@ -71,7 +71,7 @@
           </div>
           <div class="panel panel-default">
             <div class="panel-heading">
-              <h3 class="panel-title">Light Topic (subscribed to)</h3>
+              <h3 class="panel-title">Light Topic (publishing to)</h3>
             </div>
             <div class="panel-body">
               <h4 id="lightTopic"></h4>
